--- a/README
+++ b/README
@@ -1,1 +1,4 @@
+# CIDM6330
+
+Museums across the world are switching to new collection management systems. This can be for a few different reasons. A couple of examples might be the new system would better suite the museum's needs, or it might be more cost effective. Whatever the reason, there is always at least a little doubt as to whether or not all of the data transferred exactly right. The domain of practice would be museums moving to a new CMS. I work at the Panhandle-Plains Historical museum and we are in the midst of transferring to a new CMS. There is concern from my manager and myself that some of the data might be lost while moving to the new system. Not that we have do not believe the people from the new system will do something wrong, but you never know. There might be characters in our data that they haven't told us shouldn't be there that would throw out some of the data. With that in mind I want to prototype a data comparison system that extracts, compares, and reports differences between the contents of the different databases. This system will focus on schema comparison, row-by-row data checks, and data integrity verification. It will help me identify discrepancies, ensuring data consistency.
 
